--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,4 +67,4 @@ jobs:
 
       - name: Build MyPet
         run: |
-          curl -XPOST -H "Authorization: token ${{ secrets.PERSONAL_TOKEN }}" -H "Accept: application/vnd.github.everest-preview+json" -H "Content-Type: application/json" https://api.github.com/repos/xXKeyleXx/MyPet/actions/workflows/maven.yaml/dispatches --data '{"ref": "master"}'
+          curl -X POST -H "Authorization: token ${{ secrets.PERSONAL_TOKEN }}" -H "Accept: application/vnd.github.v3+json" https://api.github.com/repos/xXKeyleXx/MyPet/actions/workflows/maven.yml/dispatches --data '{"ref": "master"}'
