--- a/package.json
+++ b/package.json
@@ -24,12 +24,16 @@
     "zustand": "^5.0.9"
   },
   "dependencies": {
+    "@crowdin/ota-client": "^2.0.2",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "i18next": "^25.7.3",
+    "i18next-browser-languagedetector": "^8.2.0",
     "jszip": "^3.10.1",
     "minimessage-js": "^1.2.1",
     "react": "^19.2.3",
-    "react-dom": "^19.2.3"
+    "react-dom": "^19.2.3",
+    "react-i18next": "^16.5.0"
   }
 }
